--- a/ReagentTierUpProfitEstimation/WoWTools.csproj
+++ b/ReagentTierUpProfitEstimation/WoWTools.csproj
@@ -22,4 +22,9 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <None Update="settings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
